# m64prs

./: .clangd  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.py
.cargo/: config.toml
m64prs/: Cargo.toml
m64prs-cli-test/: Cargo.toml  build.rs
m64prs-cli-test/src/: main.rs  movie.rs
m64prs-core/: Cargo.toml  build.rs
m64prs-core/src/: core.rs  core_old.rs  ctypes.rs  enums.rs  error.rs  lib.rs  macros.rs  reexports.rs  types.rs
m64prs-core/src/core/: api.rs  config.rs  emu_state.rs  key_forward.rs  plugin.rs  save.rs  st.rs  tas_callbacks.rs  vidext.rs
m64prs-gtk/: Cargo.toml  build.rs
m64prs-gtk-macros/src/: forward_wrapper.rs  lib.rs
m64prs-gtk-test/: Cargo.toml  build.rs
m64prs-gtk-test/src/: logging.rs  main.rs
m64prs-gtk-test/src/controls/: mod.rs  subsurface_container.rs
m64prs-gtk-test/src/controls/native/: conv.rs  mod.rs
m64prs-gtk-test/src/controls/native/wayland/: macros.rs  mod.rs  state.rs
m64prs-gtk-test/src/controls/native/x11/: mod.rs  state.rs
m64prs-gtk-test/src/controls/native/xcb/: mod.rs  state.rs
m64prs-gtk-test/src/emu/: mod.rs
m64prs-gtk-test/src/ui/: actions.rs  core.rs  file_dialog.rs  macros.rs  main.rs  menu.rs  mod.rs
m64prs-gtk-test/src/ui/core/: mod.rs  vidext.rs
m64prs-gtk-test/src/ui/core/vidext/: mod.rs  opengl.rs
m64prs-gtk-test/src/ui/core_worker/: mod.rs
m64prs-gtk-test/src/view_models/: main.rs  mod.rs
m64prs-gtk-test/src/views/: macros.rs  main.rs  menu.rs  mod.rs
m64prs-gtk-utils/: Cargo.toml
m64prs-gtk-utils/src/: actions.rs  lib.rs  t_option.rs
m64prs-gtk/src/: main.rs
m64prs-gtk/src/controls/: mod.rs  subsurface_container.rs
m64prs-gtk/src/controls/compositor_view/: mod.rs
m64prs-gtk/src/controls/native/: mod.rs
m64prs-gtk/src/controls/sized_text_buffer/: mod.rs
m64prs-gtk/src/old_ui/: actions.rs  main.rs  mod.rs
m64prs-gtk/src/old_ui/core/: state.rs
m64prs-gtk/src/old_ui/dialogs/: alert.rs  file.rs  mod.rs  movie.rs
m64prs-gtk/src/ui/: actions.rs  alert_dialog.rs  file_dialog.rs  main.rs  main_window.blp  main_window.rs  menu.rs  mod.rs
m64prs-gtk/src/ui/core/: keyboard.rs  mod.rs  state.rs  threading.rs
m64prs-gtk/src/utils/: actions.rs  dpi_conv.rs  mod.rs  mp_lib.rs  t_option.rs
m64prs-movie/: Cargo.toml  README.md
m64prs-movie/src/: error.rs  helpers.rs  lib.rs
m64prs-native/: .gitignore  Cargo.toml  Makefile  m64prs-build-all.py  m64prs-vs-deps.sln
m64prs-native/src/: lib.rs
m64prs-sys/: Cargo.toml  README.md  build.rs
m64prs-sys/src/: api.rs  lib.rs  types.rs
m64prs-testbed/: Cargo.toml  build.rs
m64prs-testbed/src/: main.rs  movie.rs  vidext.rs
m64prs-testbed/src/vidext/: opengl.rs
m64prs-vcr/: Cargo.toml  README.md
m64prs-vcr/src/: lib.rs  schema.rs
m64prs-vcr/src/movie/: error.rs  helpers.rs  mod.rs
m64prs/core/: Cargo.toml  README.md
m64prs/core/src/: core.rs  error.rs  lib.rs
m64prs/core/src/core/: config.rs  emu_state.rs  key_forward.rs  plugin.rs  rom.rs  save.rs  tas_callbacks.rs  vidext.rs
m64prs/gtk/: Cargo.toml  build.rs  pot_gen.py
m64prs/gtk-macros/: Cargo.toml
m64prs/gtk-macros/src/: derive_typed_action_group.rs  forward_wrapper.rs  glib_callback.rs  lib.rs
m64prs/gtk-utils/: Cargo.toml
m64prs/gtk-utils/src/: actions.rs  error.rs  lib.rs  macro_utils.rs  menu.rs  t_option.rs
m64prs/gtk/i18n/: en_US.po  m64prs.pot  messages.pot  zh_CN.po
m64prs/gtk/i18n/en/LC_MESSAGES/: messages.po
m64prs/gtk/src/: i18n.rs  logging.rs  main.rs
m64prs/gtk/src/controls/: mod.rs
m64prs/gtk/src/controls/accel_input_dialog/: mod.rs  window.rs
m64prs/gtk/src/controls/compositor_view/: mod.rs
m64prs/gtk/src/controls/compositor_view/native/: mod.rs
m64prs/gtk/src/controls/compositor_view/native/wayland/: state.rs
m64prs/gtk/src/controls/compositor_view/native/windows/: mod.rs  state.rs
m64prs/gtk/src/controls/compositor_view/native/xcb/: state.rs
m64prs/gtk/src/controls/sized_text_buffer/: mod.rs
m64prs/gtk/src/ui/: menu.ui  mod.rs
m64prs/gtk/src/ui/accel_input_dialog/: mod.rs  window.ui
m64prs/gtk/src/ui/core/: mod.rs  threading.rs
m64prs/gtk/src/ui/core/vidext/: mod.rs  opengl.rs
m64prs/gtk/src/ui/main_window/: enums.rs  menu.rs  menu.ui  mod.blp  mod.rs  mod.ui
m64prs/gtk/src/ui/movie_dialog/: enums.rs  mod.rs  window.blp  window.rs  window.ui
m64prs/gtk/src/ui/settings_dialog/: mod.blp  mod.rs  mod.ui  settings_page.rs
m64prs/gtk/src/ui/settings_dialog/pages/: emu.blp  emu.rs  emu.ui  mod.rs  plugins.rs  plugins.ui  shortcuts.rs  shortcuts.ui  shortcuts_row.ui  test.blp
m64prs/gtk/src/ui/settings_dialog/pages/plugins/: utils.rs
m64prs/gtk/src/ui/settings_dialog/parts/: accel_model.rs  mod.rs  plugin_select.rs  plugin_select.ui
m64prs/gtk/src/utils/: dirs.rs  dpi_conv.rs  mod.rs  paths.rs
m64prs/gtk/src/utils/keyboard/: linux.rs  mod.rs  windows.rs
m64prs/native/: .gitignore  Cargo.toml  README.md  m64prs-build-unix.py  m64prs-build-win.py  m64prs-vs-deps.sln
m64prs/native/src/: lib.rs
m64prs/plugin-core/: Cargo.toml  README.md
m64prs/plugin-core/src/: core.rs  error.rs  lib.rs
m64prs/plugin-core/src/core/: config.rs  logging.rs
m64prs/src/: main.rs  vidext.rs
m64prs/src/vidext/: opengl.rs
m64prs/sys/: Cargo.toml  build.rs
m64prs/sys/src/: api.rs  common.rs  ext.rs  key.rs  lib.rs  types.rs
m64prs/vcr/: Cargo.toml  README.md
m64prs/vcr/src/: freeze.rs  lib.rs
m64prs/vcr/src/movie/: mod.rs
tasinput-bridge/: Cargo.toml
tasinput-rs/: Cargo.toml
tasinput-rs/src/: lib.rs
tasinput-ui/: Cargo.toml
tasinput/bridge/: Cargo.toml  build.rs
tasinput/bridge/src/: endpoint.rs  ffi.rs  lib.rs  plugin_state.rs  state.rs  util.rs
tasinput/protocol/: Cargo.toml
tasinput/protocol/examples/: client.rs  server.rs
tasinput/protocol/src/: codec.rs  endpoint.rs  lib.rs  messages.rs  types.rs
tasinput/ui/: Cargo.toml
tasinput/ui/assets/: main.css  main_window.blp
tasinput/ui/src/: app.rs  endpoint.rs  enums.rs  joystick.rs  main.css  main.rs  main_window.blp  main_window.rs  main_window.ui
tasinput/ui/src/app/: endpoint.rs  inner.rs
(+40 files in other folders)
