[workspace]
resolver = "2"

members = [
    "m64prs/core",
    "m64prs/gtk",
    "m64prs/gtk-macros",
    "m64prs/gtk-utils",
    "m64prs/native",
    "m64prs/sys",
    "m64prs/vcr",
    "tasinput/bridge",
    "tasinput/ui",
]

default-members = ["m64prs/gtk"]

[workspace.dependencies]

# SUBPROJECTS
# ===============================================
m64prs-core = { path = "m64prs/core" }
m64prs-gtk = { path = "m64prs/gtk" }
m64prs-gtk-macros = { path = "m64prs/gtk-macros" }
m64prs-gtk-utils = { path = "m64prs/gtk-utils" }
m64prs-native = { path = "m64prs/native" }
m64prs-sys = { path = "m64prs/sys" }
m64prs-vcr = { path = "m64prs/vcr" }

tasinput-bridge = { path = "tasinput/bridge" }
tasinput-ui = { path = "tasinput/ui" }

# GIT DEPENDENCIES
# ===============================================



# CRATES.IO DEPENDENCIES
# ===============================================

# GNOME stack
glib = { version = "0.20.7", features = ["log"] }
gio = { version = "0.20.7" }
graphene-rs = { version = "0.20.7" }
gdk = { version = "0.9.3", package = "gdk4", features = ["v4_14"] }
gsk = { version = "0.9.3", package = "gsk4", features = ["v4_14"] }
gtk = { version = "0.9.3", package = "gtk4", features = ["v4_14", "blueprint"] }

# Graphics 
dpi = "0.1.1"
raw-window-handle = "0.6.2"

sdl2 = "0.37.0"
glutin = "0.32.1"
ash = "0.38.0"

# Async
futures = "0.3.30"
async-std = "1.12.0"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"

# Logging
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }

# Derive utilities
num_enum = "0.7.2"
bitflags = "2.6.0"
thiserror = "2.0.3"

# Misc. stuff
slotmap = "1.0.7"
dlopen2 = "0.7.0"

# Build utilities
bindgen = "0.70.1"
heck = "0.4.1"
os_pipe = "1.2.1"
regex = "1.11.1"
walkdir = "2.5.0"
which = "6.0.3"

# Proc-macro libraries
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"