[workspace]
resolver = "2"

members = [
    "m64prs/core",
    "m64prs/gtk",
    "m64prs/gtk-macros",
    "m64prs/gtk-utils",
    "m64prs/native",
    "m64prs/plugin-core",
    "m64prs/sys",
    "m64prs/vcr",
    "tasinput/bridge",
    "tasinput/protocol",
    "tasinput/ui",
]

default-members = ["m64prs/gtk", "tasinput/bridge", "tasinput/ui"]

[workspace.package]
license = "GPL-3.0-or-later"
license-file = "LICENSE.md"

[workspace.dependencies]

# SUBPROJECTS
# ===============================================
m64prs-core = { path = "m64prs/core" }
m64prs-gtk = { path = "m64prs/gtk" }
m64prs-gtk-macros = { path = "m64prs/gtk-macros" }
m64prs-gtk-utils = { path = "m64prs/gtk-utils" }
m64prs-native = { path = "m64prs/native" }
m64prs-plugin-core = { path = "m64prs/plugin-core" }
m64prs-sys = { path = "m64prs/sys", features = ["serde"] }
m64prs-vcr = { path = "m64prs/vcr" }

tasinput-bridge = { path = "tasinput/bridge" }
tasinput-protocol = { path = "tasinput/protocol" }
tasinput-ui = { path = "tasinput/ui" }

# GIT DEPENDENCIES
# ===============================================

decan = { git = "https://github.com/jgcodes2020/decan.git" }

# CRATES.IO DEPENDENCIES
# ===============================================

# GNOME stack
glib = { version = "0.20.7", features = ["log"] }
gio = { version = "0.20.7" }
graphene-rs = { version = "0.20.7" }
gdk = { version = "0.9.3", package = "gdk4", features = ["v4_14"] }
gsk = { version = "0.9.3", package = "gsk4", features = ["v4_14"] }
gtk = { version = "0.9.3", package = "gtk4", features = ["v4_14", "blueprint"] }

# Translation
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
tr = { version = "0.1.10" }

# GNOME platform backends
gdk_wayland = { version = "0.9.3", package = "gdk4-wayland", features = [
    "wayland_crate",
] }
gdk_x11 = { version = "0.9.3", package = "gdk4-x11" }

# Linux/Wayland
wayland-client = { version = "0.31.7" }
wayland-backend = { version = "*", features = ["client_system"] }
glutin_egl_sys = { version = "*" }
wayland-protocols = { version = "0.32.5", features = ["client", "staging"] }

# X11
x11rb = { version = "0.13.1", features = ["allow-unsafe-code", "xfixes"] }
tiny-xlib = { version = "0.2.3" }
as-raw-xcb-connection = { version = "1.0.1" }

# Windows
gdk_win32 = { version = "0.9.3", package = "gdk4-win32", features = [
    "windows",
] }
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# Graphics 
dpi = "0.1.1"
raw-window-handle = "0.6.2"

sdl2 = "0.37.0"
glutin = "0.32.1"
ash = "0.38.0"

# Async
futures = "0.3.30"
tokio = { version = "1.42.0", features = ["macros", "rt", "sync"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
serde-brief = { version = "0.1.1", features = ["std"] }

# IPC
interprocess = { version = "2.2.2", features = ["tokio"] }
wait-timeout = "0.2.0"

# Logging
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }

# Derive utilities
num_enum = "0.7.2"
bitflags = { version = "2.6.0", features = ["serde"] }
thiserror = "2.0.3"
tracker = "0.2.2"

# Misc. stuff
chrono = "0.4.39"
dirs = "5.0.1"
rand = "0.8.5"
slotmap = "1.0.7"

# Build utilities
bindgen = "0.70.1"
embed-manifest = "1.4.0"
gl_generator = "0.14.0"
heck = "0.4.1"
os_pipe = "1.2.1"
regex = "1.11.1"
semver = "1.0.24"
toml = "0.8.16"
walkdir = "2.5.0"
which = "6.0.3"


# Proc-macro libraries
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
