[package]
name = "m64prs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = { git = "https://github.com/jgcodes2020/dlopen2.git" }

futures = "0.3.30"
log = "0.4.20"
normalize-path = "0.2.1"
thiserror = "1.0.56"

tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

[build-dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
zip = "0.6.6"
bindgen = "0.69.2"
heck = "0.4.1"
