[package]
name = "m64prs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = { git = "https://github.com/jgcodes2020/dlopen2.git" }
ash = "0.37.3"

log = "0.4"
normalize-path = "0.2.1"
thiserror = "1.0.56"

async-std = "1.12.0"
futures = "0.3.30"

[build-dependencies]

bindgen = "0.69.2"
heck = "0.4.1"