[package]
name = "m64prs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-sys = { path = "../m64prs-sys" }

dlopen2 = "0.7.0"
ash = "0.37.3"

num_enum = "0.7.2"
thiserror = "2.0.3"
log = "0.4"

async-std = "1.12.0"
futures = "0.3.30"

[build-dependencies]

bindgen = "0.69.2"
heck = "0.4.1"
