[package]
name = "m64prs-gtk-test"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { path = "../m64prs-core" }
m64prs-sys = { path = "../m64prs-sys" }
m64prs-movie = { path = "../m64prs-movie" }

send_wrapper = "0.6.0"

dpi = "0.1.1"

glib = { version = "*", features = ["log"] }
gtk = { version = "0.9.3", package = "gtk4", features = ["v4_14"] }

env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }
relm4 = "0.9.1"
pollster = "0.4.0"
relm4-components = "0.9.1"

[target.'cfg(target_os = "linux")'.dependencies]
gdk_wayland = { version = "0.9.3", package = "gdk4-wayland" }
gdk_x11 = { version = "0.9.3", package = "gdk4-x11" }

[build-dependencies]
m64prs-native = { path = "../m64prs-native" }
