[package]
name = "m64prs-gtk-test"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { path = "../m64prs-core" }
m64prs-sys = { path = "../m64prs-sys" }
m64prs-movie = { path = "../m64prs-movie" }

send_wrapper = "0.6.0"

dpi = "0.1.1"

glib = { version = "*", features = ["log"] }
graphene-rs = { version = "*" }
gdk = { version = "*", package = "gdk4", features = ["v4_14"] }
gtk = { version = "0.9.3", package = "gtk4", features = ["v4_14"] }

env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }
relm4 = "0.9.1"
pollster = "0.4.0"
glutin = "0.32.1"
raw-window-handle = "0.6.2"
ash = "0.38.0"
num_enum = "0.7.3"


[target.'cfg(target_os = "linux")'.dependencies]
# Wayland
gdk_wayland = { version = "0.9.3", package = "gdk4-wayland", optional = true }
wayland-client = { version = "0.31.7", optional = true }
wayland-backend = { version = "*", features = ["client_system"], optional = true }

# X11
gdk_x11 = { version = "0.9.3", package = "gdk4-x11", optional = true }
x11rb = { version = "0.13.1", optional = true, features = ["allow-unsafe-code", "xfixes"] }
tiny-xlib = { version = "0.2.3", optional = true }
as-raw-xcb-connection = { version = "1.0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]

[profile.dev]
panic = "abort"

[features]
default = ["x11", "wayland"]
wayland = ["dep:gdk_wayland", "dep:wayland-client", "dep:wayland-backend"]
x11 = ["dep:gdk_x11", "dep:x11rb", "dep:tiny-xlib", "dep:as-raw-xcb-connection"]

[build-dependencies]
gl_generator = "0.14.0"
m64prs-native = { path = "../m64prs-native" }
