[package]
name = "m64prs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = "0.7.0"
num_enum = "0.7.2"
bitflags = "2.5.0"

[build-dependencies]

bindgen = "0.69.4"
gix = "0.66.0"
heck = "0.4.1"
