[package]
name = "m64prs-testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-core = { path = "../m64prs-core" }
m64prs-sys = { path = "../m64prs-sys" }
m64prs-movie = { path = "../m64prs-movie" }

enum-map = "2.7.3"

log = "0.4"
env_logger = "0.11.1"

async-std = "1.12.0"
futures = "0.3.30"

cstr = "0.2.11"
send_wrapper = "0.6"

ash = "0.37"

raw-window-handle = "0.6.2"
winit = "0.30.5"
glutin = "0.32.1"
glutin-winit = "0.5.0"

[build-dependencies]
gl_generator = "0.14.0"
