[package]
name = "m64prs-vcr"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { path = "../m64prs-core" }
m64prs-sys = { path = "../m64prs-sys", features = ["serde"] }

bitflags = "2.6.0"
thiserror = "1.0.56"
serde = { version = "1.0.215", features = ["derive"] }
pollster = "0.4.0"
