[package]
name = "m64prs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-core = { path = "../m64prs-core" }
env_logger = "0.11.1"
tokio = "1.36.0"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio"] }
