[package]
name = "m64prs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-core = { path = "../m64prs-core" }
env_logger = "0.11.1"

winit = "0.29"
glutin-winit = "0.4.2"
rwh_05 = { package = "raw-window-handle", version = "0.5.2" }
glutin = "0.31"
ash = "0.37"
