[package]
name = "m64prs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-core = { path = "../m64prs-core" }
m64prs-sys = { path = "../m64prs-sys" }

log = "0.4"
env_logger = "0.11.1"


async-std = "1.12.0"
futures = "0.3.30"


cstr = "0.2.11"

winit = "0.29"
glutin-winit = "0.4.2"
rwh_05 = { package = "raw-window-handle", version = "0.5.2" }

glutin = "0.31"
gl = "0.14.0"
ash = "0.37"
