[package]
name = "m64prs-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-sys = { workspace = true }

dlopen2 = "0.7.0"
ash = "0.38.0"
sdl2 = { version = "0.37.0", optional = true }

num_enum = "0.7.2"
thiserror = "2.0.3"
bitflags = "2.6.0"
log = "0.4"

async-std = "1.12.0"
futures = "0.3.30"
slotmap = "1.0.7"

[features]
sdl2 = ["dep:sdl2"]

[build-dependencies]

bindgen = "0.69.2"
heck = "0.4.1"
