[package]
name = "m64prs-core"
version = "0.2.0"
edition = "2021"
license.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m64prs-sys = { workspace = true }

decan = { workspace = true }
ash = { workspace = true }
sdl2 = { workspace = true, optional = true }

num_enum = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }

futures = { workspace = true }
slotmap = { workspace = true }

[features]
sdl2 = ["dep:sdl2", "m64prs-sys/sdl2"]

[build-dependencies]

bindgen = "0.69.2"
heck = "0.4.1"
