[package]
name = "m64prs-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { path = "../core" }
m64prs-sys = { path = "../sys" }
m64prs-native = { path = "../native" }
m64prs-vcr = { path = "../vcr" }
m64prs-gtk-utils = { path = "../gtk-utils" }

send_wrapper = "0.6.0"

dpi = "0.1.1"

glib = { version = "*", features = ["log"] }
gio = { version = "*" }
graphene-rs = { version = "*" }
gdk = { version = "*", package = "gdk4", features = ["v4_14"] }
gtk = { version = "0.9.3", package = "gtk4", features = ["v4_14", "blueprint"] }

env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_std"] }

pollster = "0.4.0"
futures = "0.3.31"

glutin = "0.32.1"
raw-window-handle = "0.6.2"
ash = "0.38.0"

num_enum = "0.7.3"
slotmap = "1.0.7"
tracker = "0.2.2"
bincode = "1.3.3"
dirs = "5.0.1"
thiserror = "2.0.7"



[target.'cfg(target_os = "linux")'.dependencies]
# Wayland
gdk_wayland = { version = "0.9.3", package = "gdk4-wayland", features = [
    "wayland_crate",
], optional = true }
wayland-client = { version = "0.31.7", optional = true }
wayland-backend = { version = "*", features = [
    "client_system",
], optional = true }
glutin_egl_sys = { version = "*", optional = true }
wayland-protocols = { version = "0.32.5", features = [
    "client",
    "staging",
], optional = true }

# X11
gdk_x11 = { version = "0.9.3", package = "gdk4-x11", optional = true }
x11rb = { version = "0.13.1", optional = true, features = [
    "allow-unsafe-code",
    "xfixes",
] }
tiny-xlib = { version = "0.2.3", optional = true }
as-raw-xcb-connection = { version = "1.0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
gdk_win32 = { version = "0.9.3", package = "gdk4-win32", features = [
    "windows",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]


[profile.dev]
panic = "abort"

[features]
default = ["x11", "wayland"]
wayland = [
    "dep:gdk_wayland",
    "dep:wayland-client",
    "dep:wayland-backend",
    "dep:glutin_egl_sys",
    "dep:wayland-protocols",
]
x11 = ["dep:gdk_x11", "dep:x11rb", "dep:tiny-xlib", "dep:as-raw-xcb-connection"]

[build-dependencies]
gl_generator = "0.14.0"
m64prs-native = { path = "../native" }

embed-manifest = "1.4.0"
