[package]
name = "m64prs-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { workspace = true }
m64prs-sys = { workspace = true }
m64prs-native = { workspace = true }
m64prs-vcr = { workspace = true }
m64prs-gtk-utils = { workspace = true }

gettext-rs = { workspace = true }
tr = { workspace = true }

dpi = { workspace = true }

glib = { workspace = true }
gio = { workspace = true }
graphene-rs = { workspace = true }
gdk = { workspace = true }
gtk = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }

futures = { workspace = true }

glutin = { workspace = true }
raw-window-handle = { workspace = true }
ash = { workspace = true }

num_enum = { workspace = true }
slotmap = { workspace = true }
tracker = { workspace = true }
bincode = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland
gdk_wayland = { workspace = true, optional = true }
wayland-client = { workspace = true, optional = true }
wayland-backend = { workspace = true, optional = true }
glutin_egl_sys = { workspace = true, optional = true }
wayland-protocols = { workspace = true, optional = true }

# X11
gdk_x11 = { workspace = true, optional = true }
x11rb = { workspace = true, optional = true }
tiny-xlib = { workspace = true, optional = true }
as-raw-xcb-connection = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
gdk_win32 = { workspace = true }
windows = { workspace = true }


[profile.dev]
panic = "abort"

[features]
default = ["x11", "wayland"]
# Linux-specific features
wayland = [
    "dep:gdk_wayland",
    "dep:wayland-client",
    "dep:wayland-backend",
    "dep:glutin_egl_sys",
    "dep:wayland-protocols",
]
x11 = ["dep:gdk_x11", "dep:x11rb", "dep:tiny-xlib", "dep:as-raw-xcb-connection"]

install-unix = []


[build-dependencies]
gl_generator = { workspace = true }
m64prs-native = { workspace = true }

embed-manifest = { workspace = true }
