[package]
name = "m64prs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dlopen2 = "0.7.0"
num_enum = "0.7.2"
bitflags = { version = "2.5.0" }
serde = { version = "1.0.215", optional = true, features = ["derive"] }

[build-dependencies]
m64prs-native = { path = "../native" }

bindgen = "0.70.1"
# gix = "0.66.0"
heck = "0.4.1"
os_pipe = "1.2.1"
regex = "1.11.1"

[features]
serde = ["dep:serde", "bitflags/serde"]
