[package]
name = "m64prs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

decan = { workspace = true }
num_enum = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[build-dependencies]
m64prs-native = { workspace = true }

bindgen = { workspace = true }
heck = { workspace = true }
os_pipe = { workspace = true }
regex = { workspace = true }

[features]
serde = ["dep:serde", "bitflags/serde"]
