[package]
name = "m64prs-vcr"
version = "0.1.0"
edition = "2021"

[dependencies]
m64prs-core = { path = "../core" }
m64prs-sys = { path = "../sys", features = ["serde"] }

bitflags = "2.6.0"
thiserror = "1.0.56"
serde = { version = "1.0.215", features = ["derive"] }
pollster = "0.4.0"
futures = "0.3.31"
log = "0.4.22"
