[package]
name = "m64prs-vcr"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
m64prs-core = { workspace = true }
m64prs-sys = { workspace = true, features = ["serde"]}

bitflags = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
