[package]
name = "tasinput-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
m64prs-sys = { workspace = true }
m64prs-plugin-core = { workspace = true }
tasinput-protocol = { workspace = true }

decan = { workspace = true }

serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
interprocess = { workspace = true }
futures = { workspace = true }
wait-timeout = { workspace = true }

log = { workspace = true }
rand = { workspace = true }

[build-dependencies]
semver = { workspace = true }
toml = { workspace = true }

[package.metadata.m64plugin]
plugin_name = "tasinput-rs"
api_version = "2.1.1"
