[package]
name = "tasinput-protocol"
version = "0.1.0"
edition = "2021"

license.workspace = true

[dependencies]
m64prs-sys = { workspace = true }

serde = { workspace = true }
serde-brief = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
interprocess = { workspace = true }

thiserror = { workspace = true }
bitflags = { workspace = true }
rand = { workspace = true }

[[example]]
name = "client"

[[example]]
name = "server"