[package]
name = "tasinput-ui"
version = "0.1.0"
description = "UI host process for TASInput."
edition = "2021"


[dependencies]

m64prs-sys = { workspace = true }

glib = { workspace = true }
gio = { workspace = true }
graphene-rs = { workspace = true }
gsk = { workspace = true }
gdk = { workspace = true }
gtk = { workspace = true }

bitflags = { workspace = true }
