[package]
name = "tasinput-ui"
version = "0.1.0"
description = "UI host process for TASInput."
edition = "2021"


[dependencies]
m64prs-sys = { workspace = true }
tasinput-protocol = { workspace = true }

serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
interprocess = { workspace = true }
futures = { workspace = true }

glib = { workspace = true }
gio = { workspace = true }
graphene-rs = { workspace = true }
gsk = { workspace = true }
gdk = { workspace = true }
gtk = { workspace = true }

bitflags = { workspace = true }
